--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -17,5 +17,5 @@
       </ul>
     </div>
   </div>
-  <p>Total number of things: {{thingsCount}}</p>
+  <p>Total number of things: {{things.count}}</p>
 </div>
