starting work now - able to see if logged in, working on models now. switching branches.

--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -1,4 +1,4 @@
-<div class="main container">
+<div class="main container" ng-show="ifLoggedIn">
   <h1>Things</h1>
   <form ng-submit="save()" name="form" novalidate="" class="thing-form">
     <p class="input-group">
@@ -18,4 +18,5 @@
     </div>
   </div>
   <p>Total number of things: {{thingsCount}}</p>
+
 </div>
