--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  ng-app="PrioritizeTravel">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="shortcut icon" type="image/x-icon" href="app/assets/img/Favicon.ico">
   <!--Bootstrap CSS CDN-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -21,7 +22,7 @@
   <script src="app/controllers.js"></script>
   <script src="app/services.js"></script>
 
-<body ng-app="PrioritizeTravel">
+<body>
   <ng-view></ng-view>
 </body>
 </html>
