--- a/client/index.html
+++ b/client/index.html
@@ -63,21 +63,21 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">something <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Sign up/Log In</a></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
-      </ul>
+      <div ng-show="loggedIn">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Username</a></li>
+          <li ng-click="logout()"><a href="#/">Logout</a></li>
+        </ul>
+      </div>
+      <div ng-show="!loggedIn">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">something <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#/signup">Sign up</a></li>
+          <li><a href="#/login">Log In</a></li>
+        </ul>
+      </div>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
