--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" ng-controller="HomeCtrl">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -44,7 +44,7 @@
       <div ng-show="loggedIn">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Username</a></li>
-          <li ng-click="logout()"><a href="#/">Logout</a></li>
+          <li><a href="#"  ng-click="logout()">Logout</a></li>
         </ul>
       </div>
       <div ng-show="!loggedIn">
