Home percentage tab

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="app/assets/img/p_logo_nav.png" class="img-responsive">
+      <a class="navbar-brand" href="#/"><img src="app/assets/img/p_logo_nav.png" class="img-responsive">
         <!-- <img class="img-responsive" alt="Brand" src="/app/assets/img/pt_logo.png"> -->
       </a>
     </div>
@@ -49,8 +49,7 @@
       </div>
       <div ng-show="!loggedIn">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">something <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#/profile">Profile</a></li>
           <li><a href="#/signup">Sign up</a></li>
           <li><a href="#/login">Log In</a></li>
         </ul>
