profile data is there

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div ng-show="loggedIn">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Username</a></li>
+          <li><a href="#">{{username}}</a></li>
           <li><a href="#"  ng-click="logout()">Logout</a></li>
         </ul>
       </div>
