--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
   <!--Bootstrap CSS CDN-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link type="text/css" rel="stylesheet" href="app/assets/css/style.css">
 
 
@@ -61,7 +63,7 @@
 </nav>
   <ng-view></ng-view>
   <div class="footer text-center">
-    Priotize.travel powered by Expedia &copy; 2016
+    Prioritize.travel powered by Expedia &copy; 2016
   </div>
 </body>
 </html>
