Created popular and unrealdeals

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
       </div>
       <div ng-show="!loggedIn">
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="#/unreal">Unreal Deals</a></li>
           <li><a href="#/profile">Profile</a></li>
           <li><a href="#/signup">Sign up</a></li>
           <li><a href="#/login">Log In</a></li>
